# TheMachine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
TheMachine/: CMakeLists.txt
TheMachine/include/TheMachine/: TheMachine.hpp  utils.hpp
TheMachine/src/: TheMachine.cpp  main.cpp  utils.cpp
WeightsLoading/: CMakeLists.txt
WeightsLoading/include/WeightsLoading/: weights_loader.hpp
WeightsLoading/src/: weights_loader.cpp
YoloV5/: CMakeLists.txt
YoloV5/include/YoloV5/: yolov5.hpp
YoloV5/private_include/YoloV5/: layers.hpp  utils.hpp
YoloV5/src/: layers.cpp  utils.cpp  yolov5.cpp
cmake/: utils.cmake
include/TheMachine/: layers.hpp  utils.hpp  yolov5.hpp
src/: layers.cpp  main.cpp  utils.cpp  yolov5.cpp
